# ezytutors

./: Cargo.toml
tutor-db/: .env  Cargo.toml
tutor-db/src/: database.sql
tutor-db/src/iter2/: handlers.rs
tutor-db/src/iter3/: db_access.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs
tutor-db/src/iter5/: routes.rs
tutor-db/src/iter5/dbaccess/: course.rs  course.rs8CCL1G.bck
tutor-db/src/iter5/dbscripts/: course.sql
tutor-db/src/iter5/handlers/: course.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs  tutor.rs
