[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix 웹 프레임워크와 런타임
actix-web = "4.1.0"
actix-rt = "2.7.0"
# 환경변수 접근 라이브러리
dotenv = "0.15.0"

# Postgres 접근 라이브러리
sqlx = { version = "0.6.2", default_features = false,
  features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono",]}

# 데이터 직렬화 라이브러리
serde = { version = "1.0.144", features = ["derive"] }

# 기타 유틸리티
chrono = { version = "0.4.22", features = ["serde"] }

# 빌드를 위한 Openssl이 개발서버에 설치되어 있지 않은경우
openssl = { version = "0.10.41", features = ["vendored"] }
